--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.3.0",
     "three": "^0.176.0"
   },
