--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.0",
     "three": "^0.176.0"
   },
