--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/react": "^1.2.12",
     "@heroicons/react": "^2.2.0",
     "@vercel/analytics": "^1.5.0",
     "@widgetbot/react-embed": "^1.9.0",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
@@ -25,7 +28,8 @@
     "react-icons": "^5.5.0",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
