--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
+    "marked": "^15.0.12",
     "mongodb": "^6.16.0",
     "motion": "^12.18.1",
     "next": "15.3.2",
@@ -26,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1",
     "three": "^0.176.0",
