--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/react": "^1.2.12",
     "@heroicons/react": "^2.2.0",
+    "@upstash/redis": "^1.35.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.1.1",
     "@widgetbot/react-embed": "^1.9.0",
     "ai": "^4.3.16",
+    "bcrypt-ts": "^7.1.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.510.0",
     "marked": "^15.0.12",
     "mongodb": "^6.16.0",
