Added the option to open in about:blank in the settings page, and added a card component for better UI organization.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/react": "^1.2.12",
     "@heroicons/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.4.5",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@upstash/redis": "^1.35.0",
@@ -53,6 +54,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.176.0",
     "cross-env": "^7.0.3",
+    "dependency-cruiser": "^17.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "supabase": "^2.26.9",
