--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,17 @@
 {
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev", // default fallback, see below for making it dynamic
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
   "crons": [
     {
       "path": "/api/cron-password",
       "schedule": "0 0 * * *"
     }
   ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
+    }
+  ]
 }
