--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "marked": "^15.0.12",
     "mongodb": "^6.16.0",
     "motion": "^12.18.1",
-    "next": "15.3.2",
+    "next": "^15.3.2",
     "next-client-cookies": "^2.1.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
