--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.176.0",
     "uuid": "^11.1.0",
+    "ytmusic-api": "^5.3.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
