--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-youtube": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "remark-extended-table": "^2.0.3",
     "remark-gfm": "^4.0.1",
